# kepler-experimental

./: README.md
st/power-model/: README.md  pipeline.yaml  pyproject.toml
st/power-model/src/power_model/: __main__.py
st/power-model/src/power_model/cli/: __init__.py
st/power-model/src/power_model/datasource/: prometheus.py
st/power-model/src/power_model/trainer/: __init__.py  loader.py  runner.py
st/vagrant/: .gitignore  Vagrantfile  provision.sh  vm-query.sh
st/vagrant/ansible/: inventory.yaml  playbook.yml
st/vagrant/ansible/dev/tasks/: main.yml
st/vagrant/ansible/dev/vars/: main.yml
st/vagrant/ansible/docker/tasks/: main.yml
st/vagrant/ansible/kepler/stress/defaults/: main.yml
st/vagrant/ansible/kepler/stress/handlers/: main.yml
st/vagrant/ansible/kepler/stress/tasks/: main.yml
st/vagrant/ansible/kepler/stress/tests/: test.yml
st/vagrant/ansible/kepler/stress/vars/: main.yml
st/vagrant/ansible/starship/tasks/: main.yml
st/vagrant/vm/dev/compose/live/: compose.yaml
st/vagrant/vm/dev/compose/metal/: compose.yaml
st/vagrant/vm/dev/compose/metal/grafana/: download.sh
st/vagrant/vm/dev/compose/metal/grafana/dashboards/training/: dashboard.json
st/vagrant/vm/dev/compose/metal/prometheus/: prometheus.yml
st/vagrant/vm/dev/compose/metal/prometheus/scrape-configs/: metal.yaml
st/vagrant/vm/dev/compose/vm/: compose.yaml  gen-train-data.sh  training
st/vagrant/vm/dev/kpm/: pipeline.yaml  pyproject.toml
st/vagrant/vm/dev/kpm/notebooks/: model.ipynb
st/vagrant/vm/dev/kpm/src/power_model/cli/: __init__.py  estimator.py
st/vagrant/vm/dev/kpm/src/power_model/datasource/: prometheus.py
st/vagrant/vm/dev/kpm/src/power_model/trainer/: runner.py
vimal/: README.md  power-model.ipynb
(+1 files in other folders)
